--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+
+    <!-- Cretaion de la bar de navigation -->
+    <nav>
+        <div class="logo">
+            <a href="./index.html">
+                <img src="./assets/img/Logo-canal-2.svg" alt="Logo de canal">
+            </a>
+        </div>
+        <ul>
+            <li><a href="#">Acceuil</a></li>
+            <li><a href="#">Actualités</a></li>
+            <li><a href="#">Programme</a></li>
+            <li><a href="#">Direct</a></li>
+        </ul>
+        <div class="btn">
+            <button>
+                Premium
+            </button>
+        </div>
+    </nav>
 
     <script src="./assets/js/index.js"></script>
 </body>
