--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canal 2 International</title>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
@@ -15,7 +17,12 @@
                 <img src="./assets/img/Logo-canal-2.svg" alt="Logo de canal">
             </a>
         </div>
-        <ul>
+        <ul class="navLinks">
+            <li>
+                <button id="close">
+                    <ion-icon name="close"></ion-icon>
+                </button>
+            </li>
             <li><a href="#">Acceuil</a></li>
             <li><a href="#">Actualités</a></li>
             <li><a href="#">Programme</a></li>
@@ -26,7 +33,14 @@
                 Premium
             </button>
         </div>
+        <div class="menu">
+            <button id="menu">
+                <ion-icon name="menu"></ion-icon>
+            </button>
+        </div>
     </nav>
+
+    <!--  -->
 
     <script src="./assets/js/index.js"></script>
 </body>
