--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canal 2 International</title>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 
-    <!-- Cretaion de la bar de navigation -->
+    <!-- nav bar -->
     <nav>
         <div class="logo">
             <a href="./index.html">
@@ -39,9 +37,68 @@
             </button>
         </div>
     </nav>
+    <!-- end nav -->
 
-    <!--  -->
+    <!-- SECTION 1 -->
+    <section class="section-one">
+        <div class="article-img">
+            <span class="img-description"> 
+                <h2 class="title">Il tape les gens pour vivre ,françis<br> Nganou</h2>
+                <br>
+                <p class="date">Actu du 23 décembre 2023</p>
+            </span>
+            <img src="./assets/img/Francis-Nganou.svg" alt="Francis Nganou">
+        </div>
+        <div class="article-list">
+            <h3 class="a-la-une">À LA UNE DU JOUR</h3>
+            <span>
+                <img src="./assets/img/annie-spratt-cVEOh_JJmEE-unsplash 1.png" alt="">
+                <span class="p">
+                    <h1>L’école primaire de melon dans le choc</h1>
+                    <p>Lundi matin, le sous prefet du nyon-ekele est partie en visite dans son village natale </p>
+                </span>
+            </span>
 
-    <script src="./assets/js/index.js"></script>
+            <span>
+                <img src="./assets/img/images (5) 1.png" alt="">
+                <span class="p">
+                    <h1>Manifestations pour la baisse des prix</h1>
+                    <p>Lundi matin, le sous prefet du nyon-ekele est partie en visite dans son village natale </p>
+                </span>
+            </span>
+            <span>
+                <img src="./assets/img/téléchargement (3) 1.png" alt="">
+                <span class="p">
+                    <h1>Bientot un métro dans la capitale</h1>
+                    <p>Lundi matin, le sous prefet du nyon-ekele est partie en visite dans son village natale </p>
+                </span>
+            </span>
+        </div>
+    </section>
+    <!-- SECTION 1 -->
+
+    <!-- SECTION 2 -->
+    <section class="section-two">
+        <div class="photo photo1">
+            <img src="./assets/img/201606-cmr-11-lpr-2 1.png" alt="">
+            <p>Mardi , 10 Janvier 2025  10:30</p>
+            <h4>Lutte contre le travail des <br>enfants , l’UNESCO réagit</h4>
+        </div>
+        <div class="photo photo2">
+            <img src="./assets/img/images (6) 1.png" alt="">
+            <p>Mardi , 10 Janvier 2025  10:30</p>
+            <h4>The Game of Throne  , Qui <br>sera le prochain ??</h4>
+        </div>
+        <div class="photo photo3">
+            <img src="./assets/img/1200-L-can-norme-surprise-le-cameroun-battu-par-la-namibie 1.png" alt="">
+            <p>Mardi , 10 Janvier 2025  10:30</p>
+            <h4>Le lion sort de sa cage <br>et s’exprime la CAN</h4>
+        </div>
+    </section>
+    <!-- END SECTION 2 -->
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
