add of section 4

--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
     </section>
     <!-- END SECTION 2 -->
 
+    <!-- SECTION 3 -->
+    <section class="section-tree">
+        <img src="./assets/img/Group 42.png" alt="">
+    </section>
+    <!-- END SECTION 3 -->
+    
+    <section class="section-4">
+        <h1 class="h1">Retrouvez vos programmes préférés</h1>
+        <img src="./assets/img/Group 45.png" alt="">
+    </section>
+
+     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="./assets/js/script.js"></script>
